Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,6 +81,7 @@ stages:
                 $(containerRegistry)/$(imageRepository):$(tag)
 
   - deployment: DeployPullRequest
+    dependsOn: Deploy
     displayName: Deploy Pull request
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/pull/'))
     pool:
